--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+.app-wrapper {
+  box-shadow: 15px 0 30px 25px black;
+  margin: 0 auto;
+  max-width: 70em;
+  display: grid;
+  grid-template-rows: 180px 1fr;
+  grid-template-columns: 2fr 10fr;
+
+  grid-template-areas: 
+  "h h"
+  "n c";
+
+} 
+
+.parallax {
+  background-image: url(https://www.pixel-creation.com/wp-content/uploads/nice-cartoons-desktop-backgrounds-cartoon-network-full-hd-990827.jpg);
+  height: 100vh;
+  overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-wrapper-content {
+  position: relative;
+  grid-area: c;
+  background-color:chocolate;
+  min-height: 100em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
