--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,7 +1,6 @@
 .dialogs {
     display: grid;
     grid-template-columns: 2fr 10fr;
-
     font-size: 20px;
     
 }
@@ -38,18 +37,18 @@
 }
 
 .dialog.active {
-    color:gold;
+    color:rgb(255, 252, 233);
 }
 
 .messages{
 margin: 10px;
-padding: 10px;
-background: rgb(255, 174, 68);
+padding: 20px;
+background: rgb(255, 174, 69);
 border-radius: 10px;
 }
 
 .messages :nth-child(even) {
-    background: rgb(175, 175, 255);
+    background: rgb(210, 210, 250);
     border-radius: 10px;
 }
 
@@ -64,6 +63,7 @@ border-radius: 10px;
 }
 
 .messageTextArea {
+    font-size: 18px;
     width: 500px;
     height: 200px;
 }
