--- a/src/components/profile/MyPosts/MyPosts.module.css
+++ b/src/components/profile/MyPosts/MyPosts.module.css
@@ -14,10 +14,19 @@ button {
   margin: 0 0 60px 40px;
 }
 
-.post {
- 
-}
+/* .postInput {
+  border-radius: 0%;
+ border:outset 10px gold;
+ width: 865px;
+ background: rgb(236, 219, 143);
+ margin: 2%;
+} */
 
 .postBlock {
   
+}
+
+h3 {
+  text-align: center;
+  border: 4px solid grey;
 }
