--- a/src/components/profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/profile/ProfileInfo/ProfileInfo.module.css
@@ -8,3 +8,11 @@
 .descriptionBlock {
   padding: 10px;
 }
+
+.profileInfo__profileStatus {
+  padding: 10px;
+  font-size: 44px;
+  font-weight: 900;
+  font-family:'Times New Roman', Times, serif ;
+  
+}
