--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -12,7 +12,7 @@
   color: rgb(255, 255, 255);
   text-decoration: none;
   font-weight: 900;
-  font-size: xx-large;
+  font-size: 34px;
 }
 
 .item a:hover {
